# 5uzduotis

./: CMakeLists.txt  README.md  funkcijos.cpp  funkcijos.h  main.cpp
testCases/: rezultatai.txt  tekstas.txt  test.cpp
